[project]
name = "moccasin_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boa>=0.0.5",
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "httpx>=0.28.1",
    "moccasin>=0.4.2",
    "sortedcontainers>=2.4.0",
    "uvicorn>=0.38.0",
    "web3>=7.13.0",
]
